# DE32-2rd_team6

./: .pdm-python  README.md  chatting_log.json  pyproject.toml
src/de32_2rd_team6/: chat3.py  chat4.py  con_chat.py  con_chat1.py  con_chat2.py  con_chat3.py  con_chat4.py  pro_chat.py  pro_chat1.py  pro_chat2.py  pro_chat3.py  pro_chat4.py  test_chatbot.py
