[project]
name = "DE32-2rd_team6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "thephunkmonk", email = "andrewchoi1218@gmail.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "kafka>=1.3.5",
    "textual>=0.73.0",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
