[project]
name = "DE32-2rd_team6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "kafka>=1.3.5",
    "kafka-python>=2.0.2",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
